--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.198",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
