--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
+    "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.4.2",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
