--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native": "0.70.5",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-tab-view": "^3.5.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "react-native-pager-view": "6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
