--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-calendar-picker": "^7.1.4",
     "react-native-tab-view": "^3.5.2",
     "typescript": "^4.6.3",
-    "react-native-pager-view": "6.0.1"
+    "react-native-pager-view": "6.0.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
