--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendar-picker": "^7.1.4",
-    "react-native-tab-view": "^3.5.2",
-    "typescript": "^4.6.3",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-pager-view": "6.0.1",
     "react-native-reanimated": "~2.12.0",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-tab-view": "^3.5.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
