--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
@@ -33,6 +34,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
